fix navbar dropdowns on mobile

--- a/projects/laji/src/app/shared/navbar/navbar.component.scss
+++ b/projects/laji/src/app/shared/navbar/navbar.component.scss
@@ -77,6 +77,11 @@ $text-color: $primary-2;
   padding-bottom: 3px;
 }
 
+.navbar-inverse .lu-dropdown.user-dropdown, .navbar-inverse .lu-dropdown.lang-dropdown {
+  background-color: $primary-6;
+  position: relative;
+}
+
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:focus,
 .navbar-inverse .navbar-nav > .active > a:hover {
